// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tile /> renders at half opacity if tile is selected 1`] = `
.emotion-0ju21v4-Tile {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffc7;
  border: 0.5px solid black;
  border-radius: 5px;
  color: black;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 30px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  width: 30px;
}

.emotion-0gustx6-Tile {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffc7;
  border: 0.5px solid black;
  border-radius: 5px;
  color: black;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 30px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 0.5;
  width: 30px;
}

<div
  className="no-drag no-drop tile emotion-0"
  onClick={[Function]}
>
  A
</div>
`;

exports[`<Tile /> renders styled div 1`] = `
.emotion-0ju21v4-Tile {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #ffffc7;
  border: 0.5px solid black;
  border-radius: 5px;
  color: black;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 30px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  opacity: 1;
  width: 30px;
}

<div
  className="no-drag no-drop tile emotion-0"
  onClick={[Function]}
>
  A
</div>
`;
